Name:                reedsolomon
Version:             999
Synopsis:            Reed-Solomon Erasure Coding in Haskell
Description:         Please see README.md
Homepage:            http://github.com/NicolasT/reedsolomon
Bug-Reports:         http://github.com/NicolasT/reedsolomon/issues
License:             MIT
License-File:        LICENSE
Author:              Nicolas Trangez
Maintainer:          ikke@nicolast.be
Copyright:
    (c) 2015, 2016, Nicolas Trangez
    (c) 2015, Klaus Post
    (c) 2015, Backblaze
Category:            Data
Build-Type:          Custom
Extra-Source-Files:  README.md
                   , examples/README.md
                   , stack.yaml

                   , build-tools/ar-wrapper
                   , build-tools/ghc-wrapper

                   , cbits/configure.ac
                   , cbits/Makefile.am
                   , cbits/m4/ax_append_compile_flags.m4
                   , cbits/m4/ax_append_flag.m4
                   , cbits/m4/ax_check_compile_flag.m4
                   , cbits/m4/ax_code_coverage.m4
                   , cbits/m4/ax_gcc_func_attribute.m4
                   , cbits/m4/ax_require_defined.m4

                   , cbits/src/reedsolomon.c
                   , cbits/src/reedsolomon.h
                   , cbits/src/reedsolomon-dispatch.c
                   , cbits/tests/reedsolomon-gal-mul-stdio.c
                   , cbits/tests/run-test.sh
                   , cbits/tests/zeros.test
                   , cbits/tests/quickcheck-0.test
                   , cbits/tests/quickcheck-1.test
                   , cbits/tests/quickcheck-2.test
                   , cbits/tests/quickcheck-3.test
                   , cbits/tests/quickcheck-4.test
                   , cbits/tests/quickcheck-5.test
                   , cbits/tests/quickcheck-6.test
                   , cbits/tests/quickcheck-7.test
                   , cbits/tests/quickcheck-8.test
                   , cbits/tests/quickcheck-9.test
                   , cbits/tests/quickcheck-10.test
                   , cbits/tests/quickcheck-11.test
                   , cbits/tests/quickcheck-12.test
                   , cbits/tests/quickcheck-13.test
                   , cbits/tests/quickcheck-14.test
                   , cbits/tests/quickcheck-15.test
                   , cbits/tests/quickcheck-16.test
                   , cbits/tests/quickcheck-17.test
                   , cbits/tests/quickcheck-18.test
                   , cbits/tests/quickcheck-19.test
                   , cbits/tests/quickcheck-20.test
                   , cbits/tests/quickcheck-21.test
                   , cbits/tests/quickcheck-22.test
                   , cbits/tests/quickcheck-23.test
                   , cbits/tests/quickcheck-24.test
                   , cbits/tests/quickcheck-25.test
                   , cbits/tests/quickcheck-26.test
                   , cbits/tests/quickcheck-27.test
                   , cbits/tests/quickcheck-28.test
                   , cbits/tests/quickcheck-29.test
                   , cbits/tests/quickcheck-30.test
                   , cbits/tests/quickcheck-31.test
                   , cbits/tests/quickcheck-32.test
                   , cbits/tests/quickcheck-33.test
                   , cbits/tests/quickcheck-34.test
                   , cbits/tests/quickcheck-35.test
                   , cbits/tests/quickcheck-36.test
                   , cbits/tests/quickcheck-37.test
                   , cbits/tests/quickcheck-38.test
                   , cbits/tests/quickcheck-39.test
                   , cbits/tests/quickcheck-40.test
                   , cbits/tests/quickcheck-41.test
                   , cbits/tests/quickcheck-42.test
                   , cbits/tests/quickcheck-43.test
                   , cbits/tests/quickcheck-44.test
                   , cbits/tests/quickcheck-45.test
                   , cbits/tests/quickcheck-46.test
                   , cbits/tests/quickcheck-47.test
                   , cbits/tests/quickcheck-48.test
                   , cbits/tests/quickcheck-49.test
                   , cbits/tests/quickcheck-50.test
                   , cbits/tests/quickcheck-51.test
                   , cbits/tests/quickcheck-52.test
                   , cbits/tests/quickcheck-53.test
                   , cbits/tests/quickcheck-54.test
                   , cbits/tests/quickcheck-55.test
                   , cbits/tests/quickcheck-56.test
                   , cbits/tests/quickcheck-57.test
                   , cbits/tests/quickcheck-58.test
                   , cbits/tests/quickcheck-59.test
                   , cbits/tests/quickcheck-60.test
                   , cbits/tests/quickcheck-61.test
                   , cbits/tests/quickcheck-62.test
                   , cbits/tests/quickcheck-63.test
                   , cbits/tests/quickcheck-64.test
                   , cbits/tests/quickcheck-65.test
                   , cbits/tests/quickcheck-66.test
                   , cbits/tests/quickcheck-67.test
                   , cbits/tests/quickcheck-68.test
                   , cbits/tests/quickcheck-69.test
                   , cbits/tests/quickcheck-70.test
                   , cbits/tests/quickcheck-71.test
                   , cbits/tests/quickcheck-72.test
                   , cbits/tests/quickcheck-73.test
                   , cbits/tests/quickcheck-74.test
                   , cbits/tests/quickcheck-75.test
                   , cbits/tests/quickcheck-76.test
                   , cbits/tests/quickcheck-77.test
                   , cbits/tests/quickcheck-78.test
                   , cbits/tests/quickcheck-79.test
                   , cbits/tests/quickcheck-80.test
                   , cbits/tests/quickcheck-81.test
                   , cbits/tests/quickcheck-82.test
                   , cbits/tests/quickcheck-83.test
                   , cbits/tests/quickcheck-84.test
                   , cbits/tests/quickcheck-85.test
                   , cbits/tests/quickcheck-86.test
                   , cbits/tests/quickcheck-87.test
                   , cbits/tests/quickcheck-88.test
                   , cbits/tests/quickcheck-89.test
                   , cbits/tests/quickcheck-90.test
                   , cbits/tests/quickcheck-91.test
                   , cbits/tests/quickcheck-92.test
                   , cbits/tests/quickcheck-93.test
                   , cbits/tests/quickcheck-94.test
                   , cbits/tests/quickcheck-95.test
                   , cbits/tests/quickcheck-96.test
                   , cbits/tests/quickcheck-97.test
                   , cbits/tests/quickcheck-98.test
                   , cbits/tests/quickcheck-99.test

                   , cbits/aclocal.m4
                   , cbits/config.h.in
                   , cbits/configure
                   , cbits/Makefile.in
                   , cbits/build-aux/ar-lib
                   , cbits/build-aux/compile
                   , cbits/build-aux/config.guess
                   , cbits/build-aux/config.sub
                   , cbits/build-aux/depcomp
                   , cbits/build-aux/install-sh
                   , cbits/build-aux/missing
                   , cbits/build-aux/tap-driver.sh
                   , cbits/build-aux/test-driver
Cabal-Version:       >=1.10

Flag SIMD
  Description:  Enable SIMD Galois field calculation routines
  Default:      True
  Manual:       True

Flag LLVM
  Description:  Enable LLVM compilation
  Default:      True
  Manual:       True

Flag examples
  Description:  Build example binaries
  Default:      False
  Manual:       True

Library
  Hs-Source-Dirs:      src
  Exposed-Modules:     Data.ReedSolomon
                     , Data.ReedSolomon.BuildInfo
                     , Data.Vector.Storable.ByteString
  Other-Modules:       Data.ReedSolomon.Galois
                     , Data.ReedSolomon.Galois.GenTables
                     , Data.ReedSolomon.Matrix
                     , Data.Vector.Generic.Compat
                     , Data.Vector.Generic.Exceptions
                     , Data.Vector.Generic.Lifted
                     , Data.Vector.Generic.Sized
  Build-Depends:       base >= 4.7 && < 4.10
                     , vector >= 0.10 && < 0.12
                     , loop >= 0.2 && < 0.4
                     , primitive >= 0.6 && < 0.7
                     , mtl >= 2.1 && < 2.3
                     , exceptions >= 0.8 && < 0.9
                     , bytestring >= 0.10 && < 0.11
                     , profunctors >= 4.4 && < 5.3
                     , gitrev >= 1.0 && < 1.3
  Default-Language:    Haskell2010
  Ghc-Options:         -Wall -Odph
  if impl(ghc >= 7.10)
    Ghc-Options:       -g
  if impl(ghc >= 8.0)
    Ghc-Options:       -fno-warn-redundant-constraints

  if !flag(SIMD)
    Other-Modules:     Data.ReedSolomon.Galois.NoAsm
  if flag(SIMD)
    Other-Modules:     Data.ReedSolomon.Galois.SIMD
    Cpp-Options:       -DHAVE_SIMD=1
  if flag(LLVM)
    Ghc-Options:       -fllvm
    Cpp-Options:       -DHAVE_LLVM=1

Executable reedsolomon-simple-encoder
  Hs-Source-Dirs:      examples
  Main-Is:             simple-encoder.lhs
  Ghc-Options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  -- `Build-Depends` goes into the conditional block so Cabal calculates
  -- dependencies correctly, even though `Buildable` is set to `False`.
  -- See https://github.com/haskell/cabal/issues/1725#issuecomment-123783734
  if !os(windows) && flag(examples)
    Build-Depends:     base
                     , bytestring
                     , vector
                     , optparse-applicative >= 0.11 && < 0.14
                     , filepath >= 1.3 && < 1.5
                     , bytestring-mmap >= 0.2 && < 0.3
                     , reedsolomon
  else
    Buildable:         False
  Default-Language:    Haskell2010

Executable reedsolomon-simple-decoder
  Hs-Source-Dirs:      examples
  Main-Is:             simple-decoder.lhs
  Ghc-Options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  if !os(windows) && flag(examples)
    Build-Depends:     base
                     , bytestring
                     , vector
                     , optparse-applicative >= 0.11 && < 0.14
                     , filepath >= 1.3 && < 1.5
                     , bytestring-mmap >= 0.2 && < 0.3
                     , reedsolomon
  else
    Buildable:         False
  Default-Language:    Haskell2010

Executable reedsolomon-simple-bench
  Hs-Source-Dirs:      examples
  Main-Is:             simple-bench.hs
  Ghc-Options:         -rtsopts -Wall -Odph
  if impl(ghc >= 7.10)
    Ghc-Options:       -g
  if flag(LLVM)
    Ghc-Options:       -fllvm
  if flag(examples)
    Build-Depends:     base
                     , vector
                     , random >= 1.1 && < 1.2
                     , criterion >= 1.1 && < 1.2
                     , statistics >= 0.13 && < 0.14
                     , reedsolomon
  else
    Buildable:         False
  Default-Language:    Haskell2010

Executable reedsolomon-profiling
  Hs-Source-Dirs:      bench
  Main-Is:             profiling.hs
  Ghc-Options:         -rtsopts -Wall -Odph
  if impl(ghc >= 7.10)
    Ghc-Options:       -g
  if flag(LLVM)
    Ghc-Options:       -fllvm
  if flag(examples)
    Build-Depends:     base
                     , vector
                     , deepseq >= 1.3 && < 1.5
                     , random >= 1.1 && < 1.2
                     , optparse-applicative >= 0.11 && < 0.14
                     , clock >= 0.4 && < 0.8
                     , reedsolomon
  else
    Buildable:         False
  Default-Language:    Haskell2010

Test-Suite reedsolomon-test
  Type:                exitcode-stdio-1.0
  Hs-Source-Dirs:      test
                     , src
  Main-Is:             Main.hs
  Other-Modules:       Galois
                     , Matrix
                     , ReedSolomon
                     , Vector
                     , Data.ReedSolomon
                     , Data.ReedSolomon.Galois
                     , Data.ReedSolomon.Galois.GenTables
                     , Data.ReedSolomon.Galois.NoAsm
                     , Data.ReedSolomon.Matrix
                     , Data.Vector.Generic.Compat
                     , Data.Vector.Generic.Exceptions
                     , Data.Vector.Generic.Lifted
                     , Data.Vector.Generic.Sized
                     , Data.Vector.Storable.ByteString
  Build-Depends:       base
                     , vector
                     , loop
                     , primitive
                     , mtl
                     , exceptions
                     , bytestring
                     , profunctors
                     , tasty >= 0.10 && < 0.12
                     , tasty-hunit > 0.9 && < 0.10
                     , tasty-quickcheck >= 0.8 && < 0.9
                     , tasty-ant-xml >= 1.0 && < 1.1
                     , QuickCheck >= 2.7 && < 2.10
                     , random >= 1.1 && < 1.2
                     , reedsolomon
  Default-Language:    Haskell2010
  Ghc-Options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Odph
  if impl(ghc >= 7.10)
    Ghc-Options:       -g
  if impl(ghc >= 8.0)
    Ghc-Options:       -fno-warn-redundant-constraints
  if flag(LLVM)
    Ghc-Options:       -fllvm

  if flag(SIMD)
    CPP-Options:       -DHAVE_SIMD=1
    Other-Modules:     Data.ReedSolomon.Galois.SIMD

Benchmark reedsolomon-bench
  Type:                exitcode-stdio-1.0
  Hs-Source-Dirs:      bench
                     , src
  Main-Is:             Main.hs
  Other-Modules:       Data.ReedSolomon
                     , Data.ReedSolomon.Galois
                     , Data.ReedSolomon.Galois.GenTables
                     , Data.ReedSolomon.Galois.NoAsm
                     , Data.ReedSolomon.Matrix
                     , Data.Vector.Generic.Compat
                     , Data.Vector.Generic.Exceptions
                     , Data.Vector.Generic.Lifted
                     , Data.Vector.Generic.Sized
  Build-Depends:       base
                     , mtl
                     , vector
                     , loop
                     , primitive
                     , exceptions
                     , criterion >= 1.1 && < 1.2
                     , reedsolomon
  Default-Language:    Haskell2010
  Ghc-Options:         -rtsopts -Wall -Odph
  if impl(ghc >= 7.10)
    Ghc-Options:       -g
  if impl(ghc >= 8.0)
    Ghc-Options:       -fno-warn-redundant-constraints
  if flag(LLVM)
    Ghc-Options:       -fllvm

  if flag(SIMD)
    CPP-Options:       -DHAVE_SIMD=1
    Other-Modules:     Data.ReedSolomon.Galois.SIMD

Source-Repository head
  Type:     git
  Location: https://github.com/NicolasT/reedsolomon.git
